# voting_methods

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  install.sh
src/: CMakeLists.txt  main.c
src/data-structures/: CMakeLists.txt  matrix.c  matrix.h
src/modules/: CMakeLists.txt  condorcet.c  condorcet.h  condorcet_minimax.c  first_past_the_post.h  first_past_the_post_one_round.c  first_past_the_post_two_rounds.c  majority_judgement.c  majority_judgement.h
src/structures/: CMakeLists.txt  list.c  list.h  matrix.c  matrix.h  stringbuffer.c  stringbuffer.h
src/utils/: CMakeLists.txt  common.h  miscellaneous.c  miscellaneous.h
test/: CMakeLists.txt
test/modules/: CMakeLists.txt  modules_test.c  test_module.c
test/structures/: CMakeLists.txt  structures_test.c  test_list.c  test_structure.h
test/utils/: CMakeLists.txt  test_utils.c
verify_my_vote/: CMakeLists.txt  Doxyfile  Makefile  sha256.c  sha256_utils.c  sha256_utils.h  verify_my_vote.c  verify_my_vote.h
votes/: VoteCondorcet.csv
